Project

General

Profile

Actions

Bug #63859

closed

notifications/lifecycle: failure to commit a notification should not be considered an error

Added by Yuval Lifshitz 5 months ago. Updated about 1 month ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
notifications, lifecycle
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

since the actual lifecycle action cannot be rolled back, failure in "publish_commit()" should not be considered an error.
note that most issues with notifications (e.g. queue full) should be caught by "publish_reserve()" and fail the action before it happens

Actions #1

Updated by Yuval Lifshitz 5 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 54967
Actions #2

Updated by Casey Bodley about 1 month ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF