rgw/notifications/lc: handle publish_commit() failures as warnings

Fixes: https://tracker.ceph.com/issues/63859

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>